# InvestHub

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  dados_limpos.sql  dicas-investimento.cabal  docker-compose.yml  dump.sql  limpar_duplicatas.sql  migration.sql  novas_dicas.sql
app/: API.hs  Main.hs  Model.hs  Repository.hs  Server.hs
frontend/: index.html
